Fixes some layout issues

--- a/src/css/Acerca.module.css
+++ b/src/css/Acerca.module.css
@@ -6,6 +6,13 @@
 
 .contentContainer {
   display: flex;
+  width: 50%;
+  margin: 0 auto;
+}
+
+.img {
+  margin: 0 auto;
+  width: 50%;
 }
 
 .title {
@@ -44,27 +51,11 @@
 .text {
   font-family: 'Karla', sans-serif;
   font-size: 2rem;
-  width: 50%;
   margin-bottom: 1rem;
   padding-left: 2rem;
   align-self: center;
   text-align: justify;
 }
-
-/* @keyframes text {
-  0% {
-    transform: rotateX(0deg);
-  }
-
-  50% {
-    transform: rotateX(180deg);
-    font-size: 10rem;
-  }
-
-  100% {
-    transform: rotateX(1deg)
-  }
-} */
 
 @media only screen and (max-width: 600px) {
   .container {
